etl -> - добавлена логика работы с категориями - добавлено версионирование /version - добавлена ручка /healthcheck dbd -> - добавлено версионирование /version - добавлена ручка получения всех категорий /categories
